@@ -1,33 +1,17 @@
 package edu.colorado.phet.gravityandorbits.controlpanel;
 
 import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-
-import javax.swing.*;
 
 import edu.colorado.phet.common.phetcommon.model.Property;
-import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
+import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
 
 /**
  * @author Sam Reid
  */
-public class GORadioButton<T> extends JRadioButton {
+public class GORadioButton<T> extends PropertyRadioButton<T> {
     public GORadioButton( String title, final Property<T> property, final T value ) {
-        super( title );
-        final SimpleObserver updateSelected = new SimpleObserver() {
-            public void update() {
-                setSelected( property.getValue() == value );
-            }
-        };
-        addActionListener( new ActionListener() {
-            public void actionPerformed( ActionEvent e ) {
-                property.setValue( value );
-                updateSelected.update();//make sure radio buttons don't toggle off
-            }
-        } );
-        property.addObserver( updateSelected );
-        setOpaque( false );
+        super( title, property, value );
+        setOpaque( false );//TODO: is this a mac problem?
         setFont( GravityAndOrbitsControlPanel.CONTROL_FONT );
         setBackground( GravityAndOrbitsControlPanel.BACKGROUND );
         setForeground( GravityAndOrbitsControlPanel.FOREGROUND );
